// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Header component menu should open on click 1`] = `
<div>
  <div
    class="user-actions-container"
  >
    <button
      class="menu-label"
    >
      My Account
      <svg
        aria-hidden="true"
        aria-label="arrow drop down icon"
        class="usa-icon--size-3"
        color="#fff"
        fill="currentColor"
        role="img"
      >
        <use
          href="[object Object]#arrow_drop_down"
        />
      </svg>
    </button>
    <menu
      class="user-actions-menu usa-nav__secondary-links"
      hidden=""
    >
      <li>
        <a
          class="usa-link"
          href=""
          style="cursor: pointer;"
          title="Manage Profile Link"
        >
          <svg
            aria-hidden="true"
            aria-label="person icon"
            class="usa-icon--size-3"
            color="black"
            fill="currentColor"
            role="img"
          >
            <use
              href="[object Object]#person"
            />
          </svg>
          Manage Profile
        </a>
      </li>
      <li>
        <a
          class="usa-link"
          href=""
          style="cursor: pointer;"
          title="Request Role Change Link"
        >
          <svg
            aria-hidden="true"
            aria-label="people icon"
            class="usa-icon--size-3"
            color="black"
            fill="currentColor"
            role="img"
          >
            <use
              href="[object Object]#people"
            />
          </svg>
          Request Role Change
        </a>
      </li>
      <li>
        <a
          class="usa-link"
          href=""
          style="cursor: pointer;"
          title="Log Out Link"
        >
          <svg
            aria-hidden="true"
            aria-label="logout icon"
            class="usa-icon--size-3"
            color="black"
            fill="currentColor"
            role="img"
          >
            <use
              href="[object Object]#logout"
            />
          </svg>
          Log Out
        </a>
      </li>
    </menu>
  </div>
</div>
`;

exports[`Test the Header component menu should open on click 2`] = `
<div>
  <div
    class="user-actions-container"
  >
    <button
      class="menu-label"
    >
      My Account
      <svg
        aria-hidden="true"
        aria-label="arrow drop up icon"
        class="usa-icon--size-3"
        color="#fff"
        fill="currentColor"
        role="img"
      >
        <use
          href="[object Object]#arrow_drop_up"
        />
      </svg>
    </button>
    <menu
      class="user-actions-menu usa-nav__secondary-links"
    >
      <li>
        <a
          class="usa-link"
          href=""
          style="cursor: pointer;"
          title="Manage Profile Link"
        >
          <svg
            aria-hidden="true"
            aria-label="person icon"
            class="usa-icon--size-3"
            color="black"
            fill="currentColor"
            role="img"
          >
            <use
              href="[object Object]#person"
            />
          </svg>
          Manage Profile
        </a>
      </li>
      <li>
        <a
          class="usa-link"
          href=""
          style="cursor: pointer;"
          title="Request Role Change Link"
        >
          <svg
            aria-hidden="true"
            aria-label="people icon"
            class="usa-icon--size-3"
            color="black"
            fill="currentColor"
            role="img"
          >
            <use
              href="[object Object]#people"
            />
          </svg>
          Request Role Change
        </a>
      </li>
      <li>
        <a
          class="usa-link"
          href=""
          style="cursor: pointer;"
          title="Log Out Link"
        >
          <svg
            aria-hidden="true"
            aria-label="logout icon"
            class="usa-icon--size-3"
            color="black"
            fill="currentColor"
            role="img"
          >
            <use
              href="[object Object]#logout"
            />
          </svg>
          Log Out
        </a>
      </li>
    </menu>
  </div>
</div>
`;
